crates/vise/tests/ui/metrics/bogus_prefix.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/metrics/bogus_prefix.rs:4:20
  |
4 | #[metrics(prefix = "what?")]
  |                    ^^^^^^^ the evaluated program panicked at 'name contains disallowed char (allowed chars: [_a-z0-9])', $DIR/tests/ui/metrics/bogus_prefix.rs:4:20
